@@ -1,2 +1,2 @@
-debian/qmicli.1
+docs/man/qmicli.1
 debian/qmi-network.1
