@@ -1,8 +1,9 @@
 libqmi (1.6.0-1) UNRELEASED; urgency=low
 
   * New upstream stable release 1.6.0
+  * Replaced "help2man" in Debian package with the same from upstream
 
- -- Marius Kotsbak <marius@marius-ThinkPad-X230-Tablet>  Thu, 26 Sep 2013 22:59:45 +0200
+ -- Marius Kotsbak <marius@kotsbak.com>  Thu, 05 Sep 2013 10:09:30 +0200
 
 libqmi (1.4.0-1) unstable; urgency=low
 
